--- a/jirareports-poc-rest/pom.xml
+++ b/jirareports-poc-rest/pom.xml
@@ -64,6 +64,13 @@
       <version>${java.client.api.version}</version>
   </dependency>
   
+  <!-- https://mvnrepository.com/artifact/greenhopper/jira-greenhopper-plugin -->
+<dependency>
+    <groupId>greenhopper</groupId>
+    <artifactId>jira-greenhopper-plugin</artifactId>
+    <version>5.5.2</version>
+</dependency>
+  
   <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
